--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -16,8 +16,8 @@
 .close-button { color: #d3bc8e; position: absolute; right: 20px; top: 15px; font-size: 28px; font-weight: bold; cursor: pointer; }
 .close-button:hover { color: #fff; }
 .modal-content h2 { color: #d3bc8e; margin-bottom: 20px; text-align: center; font-size: 24px; border-bottom: 1px solid rgba(211, 188, 142, 0.3); padding-bottom: 10px; }
-.donation-message, .donation-message-en { margin-bottom: 20px; line-height: 1.6; text-align: center; }
-.donation-message-en { font-style: italic; color: #bbb; font-size: 14px; }
+.donation-message { margin-bottom: 20px; line-height: 1.6; text-align: center; }
+#donation-message-en, #donation-message-jp { margin-bottom: 20px; line-height: 1.6; font-style: italic; color: #bbb; font-size: 14px; text-align: left; margin-top:0}
 
 /* about-section 내 영어 번역용 스타일 */
 .about-section .donation-message-en { text-align: left; font-size: 12px; color: rgba(255, 255, 255, 0.5); margin-top: 5px; font-style: italic; }
